# ncnn-android-yolov8-pose

./: README.md  local.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov8n-pose.param  yolov8s-pose.param
app/src/main/assets/yolov8n-pose_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
app/src/main/assets/yolov8n_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
app/src/main/assets/yolov8s-pose_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
app/src/main/assets/yolov8s_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
app/src/main/jni/: CMakeLists.txt  yolo-pose.cpp  yolo-pose.h  yolov8.cpp  yolov8.h  yolov8ncnn.cpp  yolov8pose.cpp  yolov8pose.h
app/src/main/res/values/: strings.xml
